# BESS

./: .gitignore  bess.sln  pubspec.yaml
Bess/: Bess.sln  CMakeLists.txt
Bess/Bess/: App.axaml  App.axaml.cs  Bess.csproj  Program.cs  ViewLocator.cs
Bess/Bess/Components/: DummyComponent.cs
Bess/Bess/Controls/: BessSceneControl.cs
Bess/Bess/ViewModels/: DockFactory.cs  MainWindowViewModel.cs
Bess/Bess/ViewModels/MainPageViewModels/: BessSceneViewModel.cs  ComponentExplorerViewModel.cs  MenuBarViewModel.cs  ProjectExplorerViewModel.cs
Bess/Bess/Views/: MainWindow.axaml  MainWindow.axaml.cs
Bess/Bess/Views/MainPageViews/: BessSceneView.axaml  ComponentExplorerView.axaml  ComponentExplorerView.axaml.cs  MenuBar.axaml  ProjectExplorerView.axaml  ProjectExplorerView.axaml.cs
Bess/BessScene/: ApiWrapper.cs  BessScene.csproj  SceneContext.cs
Bess/BessScene/SceneCore/: SkRenderer.cs
Bess/BessScene/SceneCore/Sketches/: GateSketch.cs
Bess/include/: camera.h
Bess/include/components/: component.h
Bess/include/pages/main_page/: main_page.h  main_page_state.h
Bess/include/renderer/: renderer.h
Bess/include/renderer/gl/: vertex.h
Bess/include/scene/: scene_context.h
Bess/include/scene/entity/: empty_entity.h  entity.h
Bess/include/scene/events/: entity_event.h  event.h  event_type.h
Bess/include/ui/: ui.h
Bess/include/ui/ui_main/: ui_main.h
Bess/src/components/: component.cpp  jcomponent.cpp
Bess/src/pages/main_page/: main_page.cpp  main_page_state.cpp
Bess/src/renderer/: renderer.cpp
Bess/src/scene/: scene_context.cpp
Bess/src/scene/entity/: empty_entity.cpp  entity.cpp
Bess/src/scene/events/: event.cpp  (+1 more)
Bess/src/ui/: ui.cpp
BessCore/: CMakeLists.txt  compile_flags.txt
BessCore/BessScene/: CMakeLists.txt
BessCore/BessScene/include/: api.h  camera.h  scene_context.h
BessCore/BessScene/include/entity/: empty_entity.h  entity.h
BessCore/BessScene/include/events/: entity_event.h
BessCore/BessScene/include/renderer/: renderer.h
BessCore/BessScene/include/renderer/gl/: framebuffer.h
BessCore/BessScene/src/: api.cpp  camera.cpp  scene_context.cpp
BessCore/BessScene/src/entity/: empty_entity.cpp  entity.cpp
BessCore/BessScene/src/events/: entity_event.cpp  event.cpp
BessCore/BessScene/src/renderer/: renderer.cpp
BessCore/BessScene/src/renderer/gl/: framebuffer.cpp
BessCore/BessScene/src/transform/: transform_2d.cpp
BessCore/assets/shaders/: circle_frag.glsl  curve_frag.glsl  quad_frag.glsl  quad_frag1.glsl  vert.glsl
assets/shaders/: quad_frag.glsl  quad_vert.glsl
experiment/: comp.json  experiment.vcxproj  experiment.vcxproj.filters  jcomponent_data.cpp  jcomponent_data.h  main.cpp
lib/: app.dart  main.dart
lib/pages/main_page/: main_page.dart
lib/states/: camera.state.dart  viewport.state.dart
(+3 files in other folders)
